feat: add handlers and index.html for spa

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - ./.env:/app/.env
       - ./src:/app/src
       - ./dist:/app/dist
-      - ./assets:/app/assets
+      - ./public:/app/public
       - ./bin:/app/bin
     env_file:
       - ./.env
