--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "tsx --watch src/server.ts",
     "build": "./bin/build.sh",
     "start": "./bin/start.sh",
+    "test:watch": "jest --watch",
     "docker:dev": "./bin/docker-dev.sh",
     "docker:prod": "./bin/docker-prod.sh"
   },
@@ -17,11 +18,18 @@
     "express": "^4.21.2",
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.37.5"
+    "sequelize": "^6.37.5",
+    "typescript": "^5.7.2"
   },
   "devDependencies": {
+    "@jest/globals": "^29.7.0",
     "@types/express": "^5.0.0",
+    "@types/jest": "^29.5.14",
+    "@types/supertest": "^6.0.2",
     "esbuild": "0.24.2",
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5",
     "tsx": "^4.19.2"
   }
 }
