--- a/package.json
+++ b/package.json
@@ -7,15 +7,19 @@
     "dev": "tsx --watch src/server.ts",
     "build": "./bin/build.sh",
     "start": "./bin/start.sh",
+    "knex": "knex",
     "test:watch": "jest --watch",
     "docker:dev": "./bin/docker-dev.sh",
-    "docker:prod": "./bin/docker-prod.sh"
+    "docker:prod": "./bin/docker-prod.sh",
+    "docker:knex": "./bin/knex.sh"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "knex": "^3.1.0",
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.5",
@@ -25,11 +29,13 @@
     "@jest/globals": "^29.7.0",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
+    "@types/knex": "^0.16.1",
     "@types/supertest": "^6.0.2",
     "esbuild": "0.24.2",
     "jest": "^29.7.0",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2",
     "tsx": "^4.19.2"
   }
 }
