--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
     "typescript": "^5.7.2"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.9.4",
     "@jest/globals": "^29.7.0",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
-    "@types/knex": "^0.16.1",
     "@types/supertest": "^6.0.2",
     "esbuild": "0.24.2",
     "jest": "^29.7.0",
