chore: add husky configuration and conventional commits validation

--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "build": "./bin/build.sh",
     "start": "./bin/start.sh",
     "knex": "knex",
+    "test": "jest",
     "test:watch": "jest --watch",
     "docker:dev": "./bin/docker-dev.sh",
     "docker:prod": "./bin/docker-prod.sh",
-    "docker:knex": "./bin/knex.sh"
+    "docker:knex": "./bin/knex.sh",
+    "prepare": "husky"
   },
   "keywords": [],
   "author": "",
@@ -27,12 +29,16 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
+    "@commitlint/cli": "^19.6.1",
+    "@commitlint/config-conventional": "^19.6.0",
     "@jest/globals": "^29.7.0",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/supertest": "^6.0.2",
     "esbuild": "0.24.2",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
+    "prettier": "3.4.2",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
