--- a/biome.json
+++ b/biome.json
@@ -1,7 +1,10 @@
 {
   "$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
   "vcs": { "enabled": false, "clientKind": "git", "useIgnoreFile": false },
-  "files": { "ignoreUnknown": false, "ignore": ["dist/*", "src/db/*"] },
+  "files": {
+    "ignoreUnknown": false,
+    "ignore": ["dist/*", "src/db/*", "node_modules/*"]
+  },
   "formatter": {
     "enabled": true,
     "useEditorconfig": true,
