--- a/tsconfig.json
+++ b/tsconfig.json
@@ -109,7 +109,7 @@
     "skipLibCheck": true /* Skip type checking all .d.ts files. */,
     "baseUrl": "./",
     "paths": {
-      "*": ["src/*"]
+      "@app/*": ["./src/*"]
     },
     "moduleResolution": "node"
   }
