feat: add test database and application.config.yml

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 ######### MODE #######################
-MODE=prod
+MODE=prod # mode can be dev, prod
 
 ######### APP CONFIGURATION ###########
 DEBUG_PORT_CONTAINER=9229
@@ -11,6 +11,13 @@ DATABASE_NAME=postgres
 DATABASE_HOST=database
 DATABASE_PORT=5432
 DATABASE_PASSWORD=1234
+
+######### TEST DATABASE CONFIG #############
+TEST_DATABASE_USER=root
+TEST_DATABASE_NAME=postgres
+TEST_DATABASE_HOST=testdatabase
+TEST_DATABASE_PORT=5432
+TEST_DATABASE_PASSWORD=1234
 
 ######### DATABASE POSTGRES CONFIG #############
 POSTGRES_USER=${DATABASE_USER}
