feat(chore): not check package.json in biomejs

--- a/biome.json
+++ b/biome.json
@@ -10,7 +10,8 @@
       ".vscode/*",
       ".husky/*",
       "bin/*",
-      "public/*"
+      "public/*",
+      "package.json"
     ]
   },
   "formatter": {
