feat: add express rate limitator

--- a/.env
+++ b/.env
@@ -31,6 +31,7 @@ API_PREFIX=/api/v1
 
 HTTPS_PORT=8001
 HTTPS_PORT_CONTAINER=8001
+RATE_LIMIT_MAX=200
 
 ######### CERTS SSL ###################
 KEY_SSL_PATH=./certs/key.pem
