--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express-rate-limit": "^6.0.2",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-rate-limit": "^7.5.0",
     "js-yaml": "^4.1.0",
     "knex": "^3.1.0",
     "pg": "^8.13.1",
