--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.5",
     "typescript": "^5.7.2",
+    "winston": "^3.17.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
