feat: improve prod mode and start docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,9 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+      args:
+        target: development
+
     command: ["${COMMAND:-dev}"]
     ports:
       - "${PORT}:${PORT}"
