--- a/package.json
+++ b/package.json
@@ -3,26 +3,25 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "dev": "tsx --env-file .env --watch --inspect=0.0.0.0:${DEBUG_PORT_CONTAINER} --nolazy src/server.ts",
     "build": "./bin/build.sh",
     "start": "./bin/start.sh",
     "knex": "knex",
-    "test": "jest",
+    "test": "vitest",
     "test:watch": "jest --watch",
     "docker:dev": "./bin/docker-dev.sh",
     "docker:prod": "./bin/docker-prod.sh",
     "docker:knex": "./bin/knex.sh",
     "docker:clear": "./bin/clear-containers.sh",
     "migrate": "./bin/migrate-knex.sh",
-    "biome": "biome",
-    "prepare": "husky"
+    "biome": "biome"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/express-rate-limit": "^6.0.2",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
@@ -31,7 +30,6 @@
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.5",
-    "typescript": "^5.7.2",
     "winston": "^3.17.0",
     "zod": "^3.24.1"
   },
@@ -41,16 +39,16 @@
     "@commitlint/config-conventional": "^19.6.0",
     "@jest/globals": "^29.7.0",
     "@types/express": "^5.0.0",
-    "@types/jest": "^29.5.14",
+    "@types/express-rate-limit": "^6.0.2",
     "@types/js-yaml": "^4.0.9",
     "@types/supertest": "^6.0.2",
     "esbuild": "0.24.2",
     "husky": "^9.1.7",
-    "jest": "^29.7.0",
     "prettier": "3.4.2",
     "supertest": "^7.0.0",
-    "ts-jest": "^29.2.5",
-    "ts-node": "^10.9.2",
-    "tsx": "^4.19.2"
+    "tsx": "^4.19.2",
+    "typescript": "^5.7.3",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^3.0.6"
   }
 }
