--- a/config/database.config.yml
+++ b/config/database.config.yml
@@ -1,8 +1,17 @@
+config:
+  use: "dev"
 databases:
   dev:
+    client: "postgresql"
     user: root
     name: postgres
     host: database
     port: 5432
-    password: 1234
-  
+    password: "1234"
+  test:
+    client: "postgresql"
+    user: root
+    name: postgres
+    host: testdatabase
+    port: 5432
+    password: "1234"
