--- a/application.config.yml
+++ b/application.config.yml
@@ -1,6 +1,6 @@
 application:
-  spa-mode: true
-  test:
-    enable-default-database: true
+  spa:
+    enable: true
+    index: "public/src/frontend/index.html"
   database:
-    enable-test-connection: true
+    enable-try-connection: true
