fix: knex migration and listing change ts-node for tsx

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,7 @@ services:
       - ./dist:/app/dist
       - ./public:/app/public
       - ./bin:/app/bin
+      - ./config:/app/config
       - ./:/app
     env_file:
       - ./.env
