--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "./bin/build.sh",
     "esbuild": "esbuild",
     "start": "./bin/start.sh",
-    "knex": "knex",
+    "knex": "npx tsx ./node_modules/.bin/knex",
     "test": "vitest",
     "test:watch": "jest --watch",
     "docker:dev": "./bin/docker-dev.sh",
@@ -49,7 +49,6 @@
     "husky": "^9.1.7",
     "prettier": "3.4.2",
     "supertest": "^7.0.0",
-    "ts-node": "^10.9.2",
     "tsx": "^4.19.2",
     "typescript": "^5.7.3",
     "vite-tsconfig-paths": "^5.1.4",
