feat: add prisma for migrations

--- a/package.json
+++ b/package.json
@@ -11,19 +11,21 @@
     "start": "./bin/start.sh",
     "knex": "npx tsx ./node_modules/.bin/knex",
     "test": "vitest",
-    "test:watch": "jest --watch",
+    "migrate": "./bin/migrate-knex.sh",
+    "biome": "biome",
+    "husky": "npx husky init",
+    "prisma": "prisma",
     "docker:dev": "./bin/docker-dev.sh",
     "docker:prod": "./bin/docker-prod.sh",
     "docker:knex": "./bin/knex.sh",
     "docker:clear": "./bin/clear-containers.sh",
-    "migrate": "./bin/migrate-knex.sh",
-    "biome": "biome",
-    "husky": "npx husky init"
+    "docker:prisma": "./bin/docker-prisma.sh"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^6.4.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
@@ -48,6 +50,7 @@
     "esbuild": "0.24.2",
     "husky": "^9.1.7",
     "prettier": "3.4.2",
+    "prisma": "^6.4.1",
     "supertest": "^7.0.0",
     "tsx": "^4.19.2",
     "typescript": "^5.7.3",
