--- a/package.json
+++ b/package.json
@@ -9,15 +9,13 @@
     "build": "./bin/build.sh",
     "esbuild": "esbuild",
     "start": "./bin/start.sh",
-    "knex": "npx tsx ./node_modules/.bin/knex",
     "test": "vitest",
     "migrate": "./bin/migrate-knex.sh",
     "biome": "biome",
     "husky": "npx husky init",
-    "prisma": "prisma",
+    "prisma": "tsx prisma.ts",
     "docker:dev": "./bin/docker-dev.sh",
     "docker:prod": "./bin/docker-prod.sh",
-    "docker:knex": "./bin/knex.sh",
     "docker:clear": "./bin/clear-containers.sh",
     "docker:prisma": "./bin/docker-prisma.sh"
   },
@@ -27,10 +25,10 @@
   "dependencies": {
     "@prisma/client": "^6.4.1",
     "dotenv": "^16.4.7",
+    "execa": "^9.5.2",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
     "js-yaml": "^4.1.0",
-    "knex": "^3.1.0",
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.5",
