feat: add automatic configuration in database.config.yml for docker-compose.yml

--- a/.env
+++ b/.env
@@ -5,20 +5,6 @@ MODE=prod # mode can be dev, prod
 DEBUG_PORT_CONTAINER=9229
 DEBUG_PORT=9229
 
-######### DATABASE CONFIG #############
-DATABASE_USER=root
-DATABASE_NAME=postgres
-DATABASE_HOST=database
-DATABASE_PORT=5432
-DATABASE_PASSWORD=1234
-
-######### TEST DATABASE CONFIG #############
-TEST_DATABASE_USER=root
-TEST_DATABASE_NAME=postgres
-TEST_DATABASE_HOST=testdatabase
-TEST_DATABASE_PORT=5432
-TEST_DATABASE_PASSWORD=1234
-
 ######### DATABASE POSTGRES CONFIG #############
 POSTGRES_USER=${DATABASE_USER}
 POSTGRES_PASSWORD=${DATABASE_PASSWORD}
@@ -38,4 +24,9 @@ RATE_LIMIT_MAX=200
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL=postgresql://${DATABASE_USER}:${DATABASE_PASSWORD}@${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}?schema=public
+DATABASE_URL=postgresql://${DATABASE_USER}:${DATABASE_PASSWORD}@${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}?schema=public#  Environment
+
+DATABASE_NAME=postgres
+DATABASE_HOST=database
+DATABASE_PORT=5432
+DATABASE_PASSWORD=1234
