chore: update README

--- a/.env
+++ b/.env
@@ -6,6 +6,7 @@ DEBUG_PORT_CONTAINER=9229
 DEBUG_PORT=9229
 
 ######### DATABASE POSTGRES CONFIG #############
+#don't override these values
 POSTGRES_USER=${DATABASE_USER}
 POSTGRES_PASSWORD=${DATABASE_PASSWORD}
 POSTGRES_DB=${DATABASE_NAME}
@@ -13,7 +14,6 @@ POSTGRES_DB=${DATABASE_NAME}
 ######## SERVER CONFIG ###################
 PORT=8000
 API_PREFIX=/api/v1
-
 RATE_LIMIT_MAX=200
 
 
@@ -26,7 +26,3 @@ RATE_LIMIT_MAX=200
 
 DATABASE_URL=postgresql://${DATABASE_USER}:${DATABASE_PASSWORD}@${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}?schema=public#  Environment
 
-DATABASE_NAME=postgres
-DATABASE_HOST=database
-DATABASE_PORT=5432
-DATABASE_PASSWORD=1234
