chore: add test and test:watch mode

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "./bin/build.sh",
     "esbuild": "esbuild",
     "start": "./bin/start.sh",
-    "test": "vitest",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "biome": "biome",
     "husky": "npx husky init",
     "prisma": "tsx prisma.ts",
