--- a/biome.json
+++ b/biome.json
@@ -26,7 +26,10 @@
     "bracketSpacing": true
   },
   "organizeImports": { "enabled": true },
-  "linter": { "enabled": true, "rules": { "recommended": true } },
+  "linter": {
+    "enabled": true,
+    "rules": { "recommended": true, "style": { "useImportType": "off" } }
+  },
   "javascript": {
     "formatter": {
       "jsxQuoteStyle": "double",
