feat: add env url for database config

--- a/.env
+++ b/.env
@@ -1,6 +1,9 @@
 ######### MODE #######################
 MODE=prod # mode can be dev, prod
 
+######### DATABASE CONFIG #######################
+USE_DATABASE=prod
+
 ######### APP CONFIGURATION ###########
 DEBUG_PORT_CONTAINER=9229
 DEBUG_PORT=9229
